feat: SSL設定の自動検証・修正システムの追加
- SSL設定の問題を自動的に検出・修正するスクリプトを新規作成
- GitHub Actionsを使用した定期的なSSL証明書の監視ワークフローを追加
- Terraform設定にDNS検証レコードの自動作成機能を実装
- 証明書の有効期限と検証失敗を監視するCloudWatchアラームを追加
- ドキュメントにSSL設定自動検証・修正システムの概要を記載
- 各種スクリプトにエラーハンドリングとログ機能を実装し、可読性を向上

--- a/ansible/roles/wordpress/templates/wp-config.php.j2
+++ b/ansible/roles/wordpress/templates/wp-config.php.j2
@@ -71,6 +71,22 @@ define( 'DISALLOW_FILE_EDIT', {{ wordpress_disallow_file_edit | default('true') 
  */
 define( 'DISALLOW_FILE_MODS', {{ wordpress_disallow_file_mods | default('true') }} );
 
+/**
+ * SSL設定
+ */
+{% if wordpress_force_ssl | default(false) %}
+define( 'FORCE_SSL_ADMIN', {{ wordpress_ssl_admin | default('true') }} );
+define( 'FORCE_SSL_LOGIN', true );
+{% endif %}
+
+/**
+ * WordPress URL設定
+ */
+{% if wordpress_domain is defined %}
+define( 'WP_HOME', 'https://{{ wordpress_domain }}' );
+define( 'WP_SITEURL', 'https://{{ wordpress_domain }}' );
+{% endif %}
+
 /* 追加設定値は「さくらのマニュアル」をご利用ください。 */
 
 /** Absolute path to the WordPress directory. */
