feat: CloudFront関連ファイルの追加と設定の更新
- CloudFront IPアドレスリストを含む新しいファイルを追加
- CloudFrontアクセス用のセキュリティグループを設定
- CloudFront設定を有効化し、関連する出力を追加
- WordPress設定をHTTPSに対応させるための更新を実施
- Ansibleプレイブックを追加し、SSL設定の自動化を強化

--- a/ansible/roles/wordpress/templates/wp-config.php.j2
+++ b/ansible/roles/wordpress/templates/wp-config.php.j2
@@ -90,6 +90,14 @@ define( 'WP_SITEURL', 'https://{{ wordpress_domain }}' );
 define( 'WP_HOME', 'http://{{ wordpress_domain }}' );
 define( 'WP_SITEURL', 'http://{{ wordpress_domain }}' );
 {% endif %}
+{% elif cloudfront_domain is defined and cloudfront_domain | length > 0 %}
+{% if wordpress_force_ssl | default(false) %}
+define( 'WP_HOME', 'https://{{ cloudfront_domain }}' );
+define( 'WP_SITEURL', 'https://{{ cloudfront_domain }}' );
+{% else %}
+define( 'WP_HOME', 'http://{{ cloudfront_domain }}' );
+define( 'WP_SITEURL', 'http://{{ cloudfront_domain }}' );
+{% endif %}
 {% elif ansible_public_ipv4 is defined and ansible_public_ipv4 | length > 0 %}
 define( 'WP_HOME', 'http://{{ ansible_public_ipv4 }}' );
 define( 'WP_SITEURL', 'http://{{ ansible_public_ipv4 }}' );
