feat: CloudFront設定ファイルの追加とWordPress環境の修正
- 新しいCloudFront設定ファイルを追加
- WordPress環境の設定をCloudFront経由に対応させるための修正を実施
- PHP-FPMの設定を有効化し、Apacheとの連携を強化
- Ansibleのプレイブックとテンプレートを更新し、環境変数を利用するように変更
- 不要なmod_php設定を無効化し、PHP-FPMを使用するように変更

--- a/ansible/roles/apache/templates/wordpress.conf.j2
+++ b/ansible/roles/apache/templates/wordpress.conf.j2
@@ -1,6 +1,7 @@
 # WordPress VirtualHost (HTTP Only - CloudFront handles HTTPS)
 <VirtualHost *:80>
-    ServerName {{ ansible_default_ipv4.address | default(wordpress_domain) | default('localhost') }}
+    ServerName {{ wordpress_domain | default('example.com') }}
+    ServerAlias {{ ansible_default_ipv4.address | default('localhost') }}
     DocumentRoot /var/www/html
     
     <Directory /var/www/html>
