feat: CloudFront機能の無効化と関連ファイルの削除
- CloudFront関連の設定やリソースを無効化し、関連ファイルを削除
- CloudFront IPアドレスリストやセキュリティグループ設定を削除
- AnsibleプレイブックやTerraform設定を更新し、CloudFront機能を無効化
- Let's EncryptによるSSL/TLS証明書管理を追加し、設定を強化

--- a/ansible/roles/wordpress/templates/wp-config.php.j2
+++ b/ansible/roles/wordpress/templates/wp-config.php.j2
@@ -17,7 +17,7 @@ define( 'DB_NAME', '{{ wp_db_name | default('wordpress') }}' );
 define( 'DB_USER', '{{ wp_db_user | default('wordpress') }}' );
 
 /** MySQLデータベースパスワード */
-define( 'DB_PASSWORD', '{{ wp_db_password | default('password') }}' );
+define( 'DB_PASSWORD', '{{ wp_db_password | default(lookup('env', 'WORDPRESS_DB_PASSWORD') | default('your-secure-password-here')) }}' );
 
 /** MySQLホスト名 */
 define( 'DB_HOST', '{{ wp_db_host | default('localhost') }}' );
