feat: WordPress設定の強化と新規ファイルの追加
- .htaccessファイルを新規作成し、WordPress用の基本設定を追加
- Apache設定を更新し、htaccessファイルのMD5ハッシュを参照
- PHP設定ファイルを新規作成し、WordPress特有の設定を追加
- WordPressの設定ファイルを修正し、サブドメインによるURL設定を強化
- アクセス制御やファイル権限設定を改善し、セキュリティを向上

--- a/ansible/roles/apache/templates/wordpress.htaccess.j2
+++ b/ansible/roles/apache/templates/wordpress.htaccess.j2
@@ -9,3 +9,8 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
 # END WordPress
+
+# セキュリティヘッダー
+<IfModule mod_headers.c>
+    Header always set X-Content-Type-Options nosniff
+    Header alway
