--- a/ansible/roles/wordpress/templates/wp-config.php.j2
+++ b/ansible/roles/wordpress/templates/wp-config.php.j2
@@ -20,7 +20,7 @@ define( 'DB_USER', '{{ wp_db_user | default('wordpress') }}' );
 define( 'DB_PASSWORD', '{{ wp_db_password | default(lookup('env', 'WORDPRESS_DB_PASSWORD') | default('your-secure-password-here')) }}' );
 
 /** MySQLホスト名 */
-define( 'DB_HOST', '{{ wp_db_host | default('localhost') }}' );
+define( 'DB_HOST', '{{ rds_endpoint | default('localhost') }}' );
 
 /** データベース文字セット */
 define( 'DB_CHARSET', 'utf8mb4' );
