--- a/ansible/roles/php/templates/wordpress.ini.j2
+++ b/ansible/roles/php/templates/wordpress.ini.j2
@@ -1,13 +1,7 @@
-; WordPress用PHP設定
-; ファイルアップロードとPOSTリクエストの制限値を設定
-
-; ファイルアップロード関連
-upload_max_filesize = 128M
-post_max_size = 256M
-max_file_uploads = 20
-
-; メモリ制限
+; WordPress専用PHP設定
 memory_limit = 512M
+upload_max_filesize = 256M
+post_max_size = 512M
 max_execution_time = 300
 max_input_time = 300
 
