feat: WordPress設定の更新と新規ファイルの追加
- deployment_config.jsonにRDSエンドポイントを追加し、WordPressのURLを更新
- 新たにVARIABLES_ANALYSIS.mdを作成し、プロジェクトで使用される変数を詳細に分析
- WordPress用のApache設定ファイルを新規作成し、HTTPSリダイレクトやセキュリティヘッダーを設定
- Ansibleの設定ファイルを更新し、データベース接続情報を統一
- PHP設定を強化し、アップロード制限を増加させるための新しいテンプレートを追加

--- a/ansible/roles/database/templates/mysql.conf.j2
+++ b/ansible/roles/database/templates/mysql.conf.j2
@@ -1,8 +1,9 @@
 [client]
-host={{ wordpress_db_host }}
-user={{ wordpress_db_user }}
-password={{ wordpress_db_password }}
-database={{ wordpress_db_name }}
+host={{ wp_db_host | default(rds_host) | default('localhost') }}
+port={{ wp_db_port | default(rds_port) | default('3306') }}
+user={{ wp_db_user | default('admin') }}
+password={{ wp_db_password | default('password') }}
+database={{ wp_db_name | default('wordpress') }}
 
 [mysql]
 default-character-set=utf8mb4
