--- a/ansible/roles/php/templates/www.conf.j2
+++ b/ansible/roles/php/templates/www.conf.j2
@@ -13,7 +13,8 @@ pm.max_requests = 500
 security.limit_extensions = .php
 php_admin_value[error_log] = /var/log/php-fpm/www-error.log
 php_admin_flag[log_errors] = on
-php_admin_value[memory_limit] = 512M
-php_admin_value[max_execution_time] = 300
-php_admin_value[upload_max_filesize] = 256M
-php_admin_value[post_max_size] = 512M
+php_admin_value[memory_limit] = 1024M
+php_admin_value[max_execution_time] = 600
+php_admin_value[upload_max_filesize] = 512M
+php_admin_value[post_max_size] = 1024M
+php_admin_value[max_input_time] = 600
